# customer-churn-prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
api/: main.py  routes.py  schemas.py
dashboard/: __init__.py  app.py  service.py
data/raw/: sample_telco_churn.csv
src/: __init__.py  config.py  evaluate.py  feature_engineering.py  hyperparameter_tuning.py  logger.py  model_selection.py  pipeline.py  predict.py  preprocessing.py  train.py  utils.py
tests/: conftest.py  test_api.py  test_dashboard_service.py  test_pipeline.py  test_predict.py  test_preprocessing.py
