[project]
name = "customer-churn-prediction"
version = "1.0.0"
description = "Production-ready customer churn prediction service for the IBM Telco dataset."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["data", "models", "reports", "mlruns", "logs"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear, C4: comprehensions
select = ["E", "W", "F", "I", "UP", "B", "C4"]
ignore = ["B008"]  # FastAPI/pydantic rely on callables in argument defaults

[tool.ruff.lint.isort]
known-first-party = ["src", "api", "dashboard"]

[tool.ruff.format]
line-ending = "lf"
